--- a/scss/main.scss
+++ b/scss/main.scss
@@ -323,14 +323,13 @@ button:focus { outline: none; }
 }
 
 .slider-viewport {
-  @include perspective(2000);
+  @include perspective(1500);
   position: relative;
   height: 100%;
 
   li {
-    @include transition(all 1100ms ease);
     @include opacity(0);
-    @include transform(translate3d(0, 50px, 0) rotateX(40deg) scale(0.85));
+    @include transform(translate3d(0, 52.5px, 0) rotateX(40deg) scale(0.825));
     @include transform-origin(50%, 100%);
     z-index: 1;
     position: absolute;
@@ -343,9 +342,23 @@ button:focus { outline: none; }
     }
 
     &.next {
+      @include transition(all 1050ms ease);
       @include opacity(1);
       @include transform(translate3d(0, 0, 0) rotateX(0deg) scale(1));
-      @include transition-delay(300ms);
+      @include transition-delay(250ms);
+    }
+
+    &.prepare-prev {
+      @include transition(none);
+      @include transform(translate3d(0, 40px, 0));
+      @include opacity(0);
+    }
+
+    &.prev {
+      @include transition(all 600ms ease);
+      @include opacity(1);
+      @include transform(translate3d(0, 0, 0) rotateX(0deg) scale(1));
+      @include transition-delay(625ms);
     }
 
     &.active {
@@ -357,8 +370,14 @@ button:focus { outline: none; }
     }
 
     &.remove-forwards {
-      @include transition(all 600ms ease);
-      @include transform(translate3d(0, 40px, 0));
+      @include transition(all 500ms ease);
+      @include transform(translate3d(0, 30px, 0));
+      @include opacity(0);
+    }
+
+    &.remove-backwards {
+      @include transition(all 1000ms ease);
+      @include transform(translate3d(0, 50px, 0) rotateX(40deg) scale(0.85));
       @include opacity(0);
     }
   }
@@ -397,7 +416,7 @@ button:focus { outline: none; }
     }
 
     &:hover:after {
-      @include transform(translate3d(0, 0, 0) scale(0.4));
+      @include transform(translate3d(0, 0, 0) scale(0.5));
       @include opacity(1);
     }
 
