--- a/scss/main.scss
+++ b/scss/main.scss
@@ -202,7 +202,7 @@ button:focus { outline: none; }
 }
 
 .hero-padding {
-	padding: 135px 28px;
+	padding: 120px 28px 135px;
 }
 
 .base-section-padding {
@@ -293,7 +293,7 @@ button:focus { outline: none; }
 .menu {
 	li {
 		display: inline-block;
-		margin-left: 15px;
+    margin: 5px 0 0 15px;
 
 		a {
 			position: relative;
@@ -339,7 +339,7 @@ button:focus { outline: none; }
 .hero-tv {
 	position: absolute;
 	left: 690px;
-	top: 100px;
+	top: 90px;
 	width: 676px;
 }
 
